--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,12 @@ $h5-size: $h4-size;
 }
 
 
+.content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 10px 20px;
+}
+
 
 //Imports
 //--------------------------------------------------
